[package]
name = "pigeon_core"
version = "0.1.0"
authors = ["enter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
#serde-lexpr = "0.1.0"
serde_json = "1.0.46"
